# Zephyr-practical

./: README.md
chatterbox/chatterbox/: CMakeLists.txt  Kconfig  README.rst  prj.conf
chatterbox/chatterbox/boards/: esp_wrover_kit_procpu.overlay
chatterbox/chatterbox/src/: main.c  tasks.c  tasks.h
edf_app/edf/: CMakeLists.txt  Kconfig  README.md  prj.conf  sections-rom.ld
edf_app/edf/boards/: esp32_devkitc_procpu.overlay
edf_app/edf/src/: display.c  display.h  main.c  tasks.c  tasks.h
pcp_app/pcp/: CMakeLists.txt  Kconfig  README.md  data-sections-ram.ld  prj.conf  sections-rom.ld
pcp_app/pcp/boards/: esp32_devkitc_procpu.overlay
pcp_app/pcp/src/: critical_section.c  critical_section.h  display.c  display.h  main.c  tasks.c  tasks.h
tda_app/tda/: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
tda_app/tda/boards/: esp32_devkitc_procpu.overlay
tda_app/tda/src/: acceptance_test.c  acceptance_test.h  display.c  display.h  main.c  tasks.c  tasks.h
